# i2c-fuel-gauge-mock

./: CMakeLists.txt  README.md  STM32F103C8TX_FLASH.ld  stm32f103c8_blue_pill.cfg
Core/Inc/: main.h  stm32f1xx_hal_conf.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
USB/: usbd_desc.c  usbd_desc.h
USB/App/: usbd_cdc_if.c  usbd_cdc_if.h
